# hw06-JohnsonJDDJ

./: .buildinfo  Makefile  README.html  _config.yml  _toc.yml  book-requirements.txt  environment.yml  genindex.html  index.html  index.ipynb  objects.inv  pkg_description.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: book.yml
_sources/: README.md  index.ipynb
data/: BBH_events_v3.json
ligotools/: readligo.py  utils.py
ligotools/test/: test_readligo.py  test_utils.py
