# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Johnson Du
author_email     = zhihao617@berkeley.edu
description      = Tools for reading LIGO datafiles
long_description = file: pkg_description.txt
keywords         = ligo

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
install_requires =
	numpy >= 1.16
	
[options.packages.find]
exclude =
    examples*
    docs*
    mytoy.tests*
